tools/tests/errors/surf_cls_02.experr
cannot access private member
_secret
